cabal-version:      2.4
name:               Markdown-Spec-Generator
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Alex Washburn
maintainer:         github@recursion.ninja

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Markdown-Spec-Generator

    main-is:
      Main.hs

    other-modules:
      BNF
      LoremIpsum
      Markdown
      TopLevelDomain

    build-depends:
      aeson,
      aeson-pretty,
      base ^>=4.14.0.0,
      bytestring,
      containers,
      directory,
      filepath,
      text,
      vector
    hs-source-dirs:
      src
    default-language: Haskell2010

  ghc-options:
    -- Optimization flags
    -O2
    -threaded
    -fexcess-precision
    -fexpose-all-unfoldings
    -flate-specialise
    -foptimal-applicative-do
    -fspecialize-aggressively
    -fstatic-argument-transformation
    -- Usability flags
    -fdiagnostics-color=always
    -fhide-source-paths
    -j
    -- Sanity check warnings
    -Wall
    -Wcompat
    -Wdodgy-foreign-imports
    -Wduplicate-exports
    -Wempty-enumerations
    -Widentities
    -Wincomplete-patterns
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissed-specialisations          
    -Wmissing-deriving-strategies          
    -Wmissing-fields
    -Wmissing-home-modules
    -Wmissing-signatures
    -Wmissing-export-lists
    -Wnoncanonical-monad-instances
    -Wnoncanonical-monoid-instances
    -Woverflowed-literals
    -Woverlapping-patterns
    -Wredundant-constraints
    -Wsemigroup
    -Wtabs
    -Wunrecognised-warning-flags
    -Wunused-binds
    -Wunused-do-bind
    -Wunused-foralls
    -Wunused-imports
    -Wunused-matches
    -Wwrong-do-bind
    -Wpartial-fields

  if impl(ghc >= 8.10)
    ghc-options:
      -Wderiving-defaults
      -Wunused-packages
    